# BytesScreenShare

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
signaling-server/: README.md
signaling-server/src/: Common.hpp  SignalingServer.cpp  SignalingServer.h  Worker.cpp
src/: StreamReceiver.cpp  StreamReceiver.h  VideoOpenGLWidget.cpp  VideoOpenGLWidget.h  main.cpp  shared_screen.cpp  shared_screen.h  shared_screen.ui
src/Capture/: ScreenCaptureService.cpp  ScreenCaptureService.h
src/ImageRendering/: StreamReceiver.cpp  StreamReceiver.h  VideoOpenGLWidget.cpp  VideoOpenGLWidget.h
src/encoder/: VideoEncoder.cpp
src/network/: RtcRtpSender.cpp  RtcRtpSender.h
src/rtc/: PeerConnectionManager.cpp  PeerConnectionManager.hpp
src/signaling/: TcpSignalingClient.cpp  TcpSignalingClient.hpp  WsSignalingClient.cpp  WsSignalingClient.hpp
src/ui/: shared_screen.cpp  shared_screen.h
